--- a/eam/common/generator/src/main/resources/templates/form.html.vm
+++ b/eam/common/generator/src/main/resources/templates/form.html.vm
@@ -28,7 +28,7 @@
         #for(g : groups) <!--开始：group 循环-->
 
         #if(g.title!=null)
-        <fieldset class="layui-elem-field layui-field-title" style="margin-top: 8px;">
+        <fieldset class="layui-elem-field layui-field-title form-group-title">
             <legend>#(g.title)</legend>
         </fieldset>
         #end
