--- a/eam/view/view-ops/src/main/resources/public/business/ops/host/host_form.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/host/host_form.html
@@ -2,7 +2,7 @@
 /**
  * 主机 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-12 13:26:26
+ * @since 2021-08-12 16:38:05
  */
  -->
  <!DOCTYPE html>
@@ -57,12 +57,12 @@
 
 
                 
-                <div class="layui-form-item" >
-                    <div class="layui-form-label "><div th:text="${lang.translate('位置')}">位置</div></div>
-                    <div class="layui-input-block ">
-                        <input lay-filter="positionId" id="positionId" name="positionId" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('位置') }" type="text" class="layui-input"   />
+                    <div class="layui-form-item" >
+                        <div class="layui-form-label "><div th:text="${lang.translate('所在位置')}">所在位置</div></div>
+                        <div class="layui-input-block ">
+                            <div id="positionId" th:data="${'/service-ops/ops-host-position/query-list'}"></div>
+                        </div>
                     </div>
-                </div>
 
 
                 
@@ -205,7 +205,7 @@
          <!--开始：group 循环-->
 
         <fieldset class="layui-elem-field layui-field-title" style="margin-top: 8px;">
-            <legend>系统、数据库、中间件</legend>
+            <legend>系统、数据库和中间件</legend>
         </fieldset>
 
         <div class="layui-row form-row">
