--- a/eam/common/generator/src/main/resources/templates/ServiceImplment.java.vm
+++ b/eam/common/generator/src/main/resources/templates/ServiceImplment.java.vm
@@ -23,6 +23,13 @@ public class #(simpleName) extends SuperService<#(poSimpleName)> implements #(in
 	 * 获得 DAO 对象
 	 * */
 	public DAO dao() { return dao; }
+
+	#for (jd : injectDescs)
+
+	@#(jd.annTypeName) #if(jd.resourceName!=null)(name="#(jd.resourceName)")#end
+	private #(jd.typeName) #(jd.varName);
+	#end
+
 	
 	@Override
 	public Object generateId(Field field) {
