--- a/eam/view/view-ops/src/main/resources/public/business/ops/host/host_form.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/host/host_form.html
@@ -1,8 +1,8 @@
 <!-- 
 /**
  * 主机 列表页 JS 脚本
- * @author 李方捷 , leefangjie@qq.com
- * @since 2021-08-12 19:26:40
+ * @author 金杰 , maillank@qq.com
+ * @since 2021-08-13 08:24:22
  */
  -->
  <!DOCTYPE html>
