--- a/eam/view/view-ops/src/main/resources/public/business/ops/service_detail/service_detail_form.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/service_detail/service_detail_form.html
@@ -2,7 +2,7 @@
 /**
  * 服务明细 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-12 13:43:02
+ * @since 2021-08-13 10:07:10
  */
  -->
  <!DOCTYPE html>
@@ -157,6 +157,15 @@
                     <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('version')}">version</div></div>
                     <div class="layui-input-block layui-input-block-c1">
                         <input lay-filter="version" id="version" name="version" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('version') }" type="text" class="layui-input"   />
+                    </div>
+                </div>
+
+
+                
+                <div class="layui-form-item" >
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('类型名称')}">类型名称</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
+                        <input lay-filter="resServicename" id="resServicename" name="resServicename" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('类型名称') }" type="text" class="layui-input"   />
                     </div>
                 </div>
 
