--- a/eam/view/view-ops/src/main/resources/public/business/ops/service_detail/service_detail_list.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/service_detail/service_detail_list.html
@@ -2,7 +2,7 @@
 /**
  * 服务明细 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-12 13:43:00
+ * @since 2021-08-13 10:07:09
  */
  -->
  <!DOCTYPE html>
@@ -50,6 +50,11 @@
                     <div class="search-unit">
                         <div class="search-label-div"><span th:text="${lang.translate('备注')}" class="search-label">备注</span><span class="search-colon">:</span></div>
                         <input id="notes" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 类型名称 , resServicename ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div"><span th:text="${lang.translate('类型名称')}" class="search-label">类型名称</span><span class="search-colon">:</span></div>
+                        <input id="resServicename" class="layui-input search-input" style="width: 140px" type="text" />
                     </div>
 
 
