--- a/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_list.html
+++ b/eam/view/view-eam/src/main/resources/public/business/eam/asset/asset_list.html
@@ -2,7 +2,7 @@
 /**
  * 资产 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-08-05 15:17:43
+ * @since 2021-08-13 13:57:20
  */
  -->
  <!DOCTYPE html>
@@ -13,10 +13,11 @@
     <meta charset="utf-8"/>
     <title th:text="${lang.translate('资产')}">资产</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="/assets/libs/layui/css/layui.css"/>
-    <link rel="stylesheet" href="/assets/css/admin.css"/>
-    <link rel="stylesheet" href="/assets/css/foxnic-web.css">
+    <link rel="stylesheet" href="/assets/libs/layui/css/layui.css" th:href="'/assets/libs/layui/css/layui.css?'+${cacheKey}"/>
+    <link rel="stylesheet" href="/assets/css/admin.css" th:href="'/assets/css/admin.css?'+${cacheKey}"/>
+    <link rel="stylesheet" href="/assets/css/foxnic-web.css" th:href="'/assets/css/foxnic-web.css?'+${cacheKey}">
     <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
+    <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
 </head>
 
 <body style="overflow-y: hidden">
@@ -24,131 +25,119 @@
 <div class="layui-card">
  
     <div class="layui-card-body">
-        <div class="layui-form toolbar search-bar">
 
-            <div class="search-unit">
-                <span th:text="${lang.translate('主键')}" class="search-label">主键</span><span class="search-colon">:</span>
-                <input id="id" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入主键')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('单据编号')}" class="search-label">单据编号</span><span class="search-colon">:</span>
-                <input id="busiCode" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入单据编号')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('资产状态')}" class="search-label">资产状态</span><span class="search-colon">:</span>
-                <input id="status" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入资产状态')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('资产编号')}" class="search-label">资产编号</span><span class="search-colon">:</span>
-                <input id="assetCode" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入资产编号')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('分类ID')}" class="search-label">分类ID</span><span class="search-colon">:</span>
-                <input id="categoryId" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入分类ID')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('标准型号ID')}" class="search-label">标准型号ID</span><span class="search-colon">:</span>
-                <input id="goodsId" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入标准型号ID')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('标准型号资产名称')}" class="search-label">标准型号资产名称</span><span class="search-colon">:</span>
-                <input id="name" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入标准型号资产名称')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('标准型号厂商')}" class="search-label">标准型号厂商</span><span class="search-colon">:</span>
-                <input id="manufacturerId" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入标准型号厂商')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('标准型号品牌')}" class="search-label">标准型号品牌</span><span class="search-colon">:</span>
-                <input id="brandId" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入标准型号品牌')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('标准型号规格型号')}" class="search-label">标准型号规格型号</span><span class="search-colon">:</span>
-                <input id="model" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入标准型号规格型号')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('标准型号物品图片')}" class="search-label">标准型号物品图片</span><span class="search-colon">:</span>
-                <input id="pictureId" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入标准型号物品图片')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('标准型号计量单位')}" class="search-label">标准型号计量单位</span><span class="search-colon">:</span>
-                <input id="unit" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入标准型号计量单位')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('标准型号单价')}" class="search-label">标准型号单价</span><span class="search-colon">:</span>
-                <input id="unitPrice" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入标准型号单价')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('资产RFID')}" class="search-label">资产RFID</span><span class="search-colon">:</span>
-                <input id="rfid" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入资产RFID')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('资产数量')}" class="search-label">资产数量</span><span class="search-colon">:</span>
-                <input id="assetNumber" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入资产数量')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('批次号如果来自库存建议填写库存单据')}" class="search-label">批次号如果来自库存建议填写库存单据</span><span class="search-colon">:</span>
-                <input id="batchNumber" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入批次号如果来自库存建议填写库存单据')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('资产序列号')}" class="search-label">资产序列号</span><span class="search-colon">:</span>
-                <input id="sn" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入资产序列号')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('来源')}" class="search-label">来源</span><span class="search-colon">:</span>
-                <input id="sourceId" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入来源')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('来源详情')}" class="search-label">来源详情</span><span class="search-colon">:</span>
-                <input id="sourceDetail" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入来源详情')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('存放区域')}" class="search-label">存放区域</span><span class="search-colon">:</span>
-                <input id="areaId" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入存放区域')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('存放地点')}" class="search-label">存放地点</span><span class="search-colon">:</span>
-                <input id="placeDetail" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入存放地点')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('使用人员')}" class="search-label">使用人员</span><span class="search-colon">:</span>
-                <input id="userId" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入使用人员')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('生产日期')}" class="search-label">生产日期</span><span class="search-colon">:</span>
-                 <input type="text" id="productionDate-begin" style="width: 90px" lay-verify="date" th:placeholder="${lang.translate('开始日期')}" autocomplete="off" class="layui-input search-input search-date-input"  readonly >
-                 <span class="search-dash">-</span>
-                 <input type="text" id="productionDate-end"  style="width: 90px"  lay-verify="date" th:placeholder="${lang.translate('结束日期')}" autocomplete="off" class="layui-input search-input search-date-input" readonly>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('入库时间')}" class="search-label">入库时间</span><span class="search-colon">:</span>
-                 <input type="text" id="storageTime-begin" style="width: 90px" lay-verify="date" th:placeholder="${lang.translate('开始日期')}" autocomplete="off" class="layui-input search-input search-date-input"  readonly >
-                 <span class="search-dash">-</span>
-                 <input type="text" id="storageTime-end"  style="width: 90px"  lay-verify="date" th:placeholder="${lang.translate('结束日期')}" autocomplete="off" class="layui-input search-input search-date-input" readonly>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('是否显示(显示:1')}" class="search-label">是否显示(显示:1</span><span class="search-colon">:</span>
-                <input id="display" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入是否显示(显示:1')}"/>
-            </div>
-            <div class="search-unit">
-                <span th:text="${lang.translate('备注')}" class="search-label">备注</span><span class="search-colon">:</span>
-                <input id="assetsNotes" class="layui-input search-input" type="text" th:placeholder="${lang.translate('请输入备注')}"/>
+        <div class="search-bar">
+
+            <div class="search-input-rows" style="opacity: 0">
+                <!-- 搜索输入区域 -->
+                <div class="layui-form toolbar search-inputs">
+                    <!-- 名称 , name ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div"><span th:text="${lang.translate('名称')}" class="search-label">名称</span><span class="search-colon">:</span></div>
+                        <input id="name" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 资产编号 , assetCode ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div"><span th:text="${lang.translate('资产编号')}" class="search-label">资产编号</span><span class="search-colon">:</span></div>
+                        <input id="assetCode" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 序列 , sn ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div"><span th:text="${lang.translate('序列')}" class="search-label">序列</span><span class="search-colon">:</span></div>
+                        <input id="sn" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+
+
+                </div>
+                <!-- 搜索输入区域 -->
+                <div class="layui-form toolbar search-inputs">
+                    <!-- 单据编号 , busiCode ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div"><span th:text="${lang.translate('单据编号')}" class="search-label">单据编号</span><span class="search-colon">:</span></div>
+                        <input id="busiCode" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 资产状态 , status ,typeName=select_box, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div"><span th:text="${lang.translate('资产状态')}" class="search-label">资产状态</span><span class="search-colon">:</span></div>
+                        <div id="status" th:data="${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}" style="width:140px"></div>
+                    </div>
+
+
+                </div>
+                <!-- 搜索输入区域 -->
+                <div class="layui-form toolbar search-inputs">
+                    <!-- 使用人员 , userId ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div"><span th:text="${lang.translate('使用人员')}" class="search-label">使用人员</span><span class="search-colon">:</span></div>
+                        <input id="userId" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 备注 , assetsNotes ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div"><span th:text="${lang.translate('备注')}" class="search-label">备注</span><span class="search-colon">:</span></div>
+                        <input id="assetsNotes" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 来源 , sourceId ,typeName=select_box, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div"><span th:text="${lang.translate('来源')}" class="search-label">来源</span><span class="search-colon">:</span></div>
+                        <div id="sourceId" th:data="${dict.toArray('eam_source')}" style="width:140px"></div>
+                    </div>
+
+
+                </div>
+                <!-- 搜索输入区域 -->
+                <div class="layui-form toolbar search-inputs">
+                    <!-- 来源详情 , sourceDetail ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div"><span th:text="${lang.translate('来源详情')}" class="search-label">来源详情</span><span class="search-colon">:</span></div>
+                        <input id="sourceDetail" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 存放地点 , placeDetail ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div"><span th:text="${lang.translate('存放地点')}" class="search-label">存放地点</span><span class="search-colon">:</span></div>
+                        <input id="placeDetail" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 入库时间 , storageTime ,typeName=date_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div"><span th:text="${lang.translate('入库时间')}" class="search-label">入库时间</span><span class="search-colon">:</span></div>
+                            <input type="text" id="storageTime"  style="width: 140px"  lay-verify="date" th:placeholder="${lang.translate('请选择')}" autocomplete="off" class="layui-input search-input search-date-input" readonly>
+                    </div>
+                    <!-- 批次代码 , batchCode ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div"><span th:text="${lang.translate('批次代码')}" class="search-label">批次代码</span><span class="search-colon">:</span></div>
+                        <input id="batchCode" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+
+
+                </div>
             </div>
 
-            <button id="search-button" class="layui-btn icon-btn"><i class="layui-icon">&#xe615;</i><span th:text="${lang.translate('搜索')}">搜索</span></button>
-            <button th:if="${perm.checkAuth('eam_asset:create')}" id="add-button" class="layui-btn icon-btn"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('添加')}">添加</span></button>
-            <button th:if="${perm.checkAuth('eam_asset:delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
-            
+
+            <!-- 按钮区域 -->
+            <div class="layui-form toolbar search-buttons" style="opacity: 0">
+                <button id="search-button" class="layui-btn icon-btn"><i class="layui-icon">&#xe615;</i>&nbsp;&nbsp;<span th:text="${lang.translate('搜索')}">搜索</span></button>
+                <button id="search-button-advance" class="layui-btn layui-btn-primary icon-btn search-button-advance"><i class="layui-icon">&#xe671;</i><span th:text="${lang.translate('更多')}">更多</span></button>
+            </div>
         </div>
 
-        <table class="layui-table" id="data-table" lay-filter="data-table"></table>
+        <div style="margin-top: 44px">
+            <table class="layui-table" id="data-table" lay-filter="data-table"></table>
+        </div>
+
     </div>
 </div>
 
-<script type="text/javascript" src="/module/global.js"></script>
-<script type="text/javascript" src="/assets/libs/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="/assets/libs/pandyle.min.js"></script>
-<script type="text/javascript" src="/assets/libs/layui/layui.js"></script>
+<script type="text/javascript" src="/module/global.js" th:src="'/module/global.js?'+${cacheKey}"></script>
+<script type="text/javascript" src="/assets/libs/jquery-3.2.1.min.js" th:src="'/assets/libs/jquery-3.2.1.min.js?'+${cacheKey}"></script>
+<script type="text/javascript" src="/assets/libs/pandyle.min.js" th:src="'/assets/libs/pandyle.min.js?'+${cacheKey}"></script>
+<script type="text/javascript" src="/assets/libs/layui/layui.js" th:src="'/assets/libs/layui/layui.js?'+${cacheKey}"></script>
+
+<!-- 表格工具栏 -->
+<script type="text/html" id="toolbarTemplate">
+    <div class="layui-btn-container">
+        <button th:if="${perm.checkAuth('eam_asset:create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm" lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('添加')}">添加</span></button>
+            <button th:if="${perm.checkAuth('eam_asset:delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger layui-btn-sm" lay-event="batch-del"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
+    </div>
+</script>
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
@@ -159,10 +148,12 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
+    var SELECT_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.eam.AssetStatusEnum')}]];
+    var SELECT_SOURCEID_DATA = [[${dict.toArray('eam_source')}]];
     var AUTH_PREFIX="eam_asset";
 </script>
 
-<script src="/business/eam/asset/asset_list.js"></script>
+<script th:src="'/business/eam/asset/asset_list.js?'+${cacheKey}"></script>
 
 </body>
 </html>
