--- a/eam/common/generator/src/main/resources/templates/form.html.vm
+++ b/eam/common/generator/src/main/resources/templates/form.html.vm
@@ -14,6 +14,25 @@
     <link rel="stylesheet" href="/assets/css/foxnic-web.css" th:href="'/assets/css/foxnic-web.css?'+${cacheKey}"/>
     <link href="/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css" th:href="@{/assets/libs/font-awesome-4.7.0/css/font-awesome.min.css}" rel="stylesheet"/>
     <script th:inline="javascript">var foxnic_cachekey=[[${cacheKey}]];</script>
+    <style>
+    #if(labelWidth!=null)
+    #if(groups.size()==1)
+        .layui-form-label-c1 {
+            width: #(labelWidth)px;
+        }
+        .layui-input-block-c1 {
+            margin-left: #(labelWidth+35)px;
+        }
+    #else
+        .layui-form-label {
+            width: #(labelWidth)px;
+        }
+        .layui-input-block {
+            margin-left: #(labelWidth+35)px;
+        }
+    #end
+    #end
+    </style>
 </head>
 
 <body style="overflow-y: hidden">
